Add Code Coverage Plugin